--- a/teach.css
+++ b/teach.css
@@ -4,54 +4,64 @@ body{
 
 .main{
     background-color:aliceblue;
-    width: 360px;
-    height: 430px;
+    width: 550px;
+    height: 650px;
 
-    margin-top: 30px;
+    margin-top: 100px;
     border-radius: 25px;
     box-shadow: 0 10px 50px rgb(48, 50, 190);
 }
 
 h1{
     position: absolute;
-    top: 20px;
-    right: 400px;
-    font-size: 1.5em;
+    top: 90px;
+    right: 700px;
+    font-size: 2.5em;
 }
 
 .p1{
     position: absolute;
-    top: 100px;
-    right: 405px;
+    top: 250px;
+    left: 740px;
+    font-size: 1.5em;
 }
 
 .p2{
     position: absolute;
-    top:400px;
-    right: 420px;
+    top:650px;
+    left: 850px;
     color: rgb(34, 0, 128);
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
 .img1{
     position: absolute;
-    left: 280px;
-    top: 10px;
+    left: 550px;
+    top: 50px;
+    width: 300px;
+    height: 150px;
 }
 
 .img2{
     position: absolute;
-    left: 580px;
-    top: 370px;
-    width: 200px;
-    height: 130px;
+    right: 550px;
+    top: 600px;
+    width: 300px;
+    height: 200px;
 }
 
 .img3{
     position: absolute;
-    left: 330px;
-    top: 345px;
-    width: 100px;
-    height: 130px;
+    left: 600px;
+    top: 590px;
+    width: 150px;
+    height: 200px;
 }
 
+.img4{
+    position: absolute;
+    left: 730px;
+    top: 630px;
+    width: 150px;
+    height: 200px;
+}
